# quant-data-engine

./: .gitignore  LICENSE  README.md  hello_btc.py  learnings.md  pyproject.toml  requirements.txt
notebooks/: demo.ipynb  hello_btc.ipynb
scripts/: daily_update.py
src/qde/: quality.py  storage.py
src/qde/loaders/: __init__.py  binance_loader.py  http.py  kraken_loader.py  symbols.py  yfinance_loader.py
tests/: test_binance_loader.py  test_kraken_loader.py  test_storage.py  test_unified_loader.py  test_yfinance_loader.py
